--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,12 @@ html {
   -webkit-scroll-behavior: smooth;
 }
 
+body {
+  background: var(--bg-radial);
+}
+.main-wrapper {
+  padding: 0 70px;
+}
 /* nav bar styles */
 .navbar {
   width: 100vw;
@@ -41,6 +47,7 @@ html {
   z-index: 99;
   background-color: #ffffff;
   border-bottom: 1px solid #000000;
+  overflow: hidden;
   /* border: 2px solid red; */
 }
 
@@ -76,7 +83,6 @@ ul.menu-items {
   flex-direction: column;
   padding-top: calc(var(--nav-height) + 1.7rem);
   overflow: hidden;
-  background: var(--bg-radial);
 }
 
 /* top section of Hero section */
@@ -85,27 +91,25 @@ ul.menu-items {
   display: flex;
   height: 45vh;
   width: 100vw;
-
-  /* border-bottom: 4px solid #212122; */
 }
 
 .hero-top-left {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   width: 55vw;
   height: 100%;
 }
 
 .hero-top-right {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center; */
+  /* align-items: center; */
   height: auto;
   width: 45vw;
   background-image: url("https://cwbermuda.netlify.com/img/Bermuda.svg");
   /* background-image: url("http://localhost:5500/img/Bermuda.svg"); */
   background-repeat: no-repeat;
-  background-position: center;
+  /* background-position: center; */
   /* background-size: 30rem; */
   background-size: 30rem;
 }
