--- a/css/styles.css
+++ b/css/styles.css
@@ -95,21 +95,21 @@ ul.menu-items {
 
 .hero-top-left {
   display: flex;
-  /* justify-content: center; */
+  justify-content: center;
   width: 55vw;
   height: 100%;
 }
 
 .hero-top-right {
   display: flex;
-  /* justify-content: center; */
+  justify-content: center;
   /* align-items: center; */
   height: auto;
   width: 45vw;
   background-image: url("https://cwbermuda.netlify.com/img/Bermuda.svg");
   /* background-image: url("http://localhost:5500/img/Bermuda.svg"); */
   background-repeat: no-repeat;
-  /* background-position: center; */
+  background-position: center;
   /* background-size: 30rem; */
   background-size: 30rem;
 }
